<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            style="@style/InputFields"
            android:text="@string/text_account_details"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/email_address"
            style="@style/InputFields"
            android:text="@string/text_email" />

        <TextView
            android:id="@+id/balance"
            style="@style/InputFields"
            android:text="@string/text_balance" />

        <TextView
            android:id="@+id/api_id"
            style="@style/InputFields.divider"
            android:text="@string/text_api_id" />

        <Button
            android:id="@+id/buy"
            style="@style/InputFields"
            android:text="@string/text_buy_credits" />

        <CheckBox
            android:id="@+id/cb_test_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_mode" />

    </LinearLayout>

</ScrollView>