<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/message"
            style="@style/InputFields"
            android:text="" />

        <EditText
            android:id="@+id/username"
            style="@style/InputFields"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            style="@style/InputFields"
            android:hint="@string/text_password"
            android:inputType="textPassword" />

        <ImageView
            android:id="@+id/captcha_image"
            style="@style/InputFields"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/captcha" />

        <EditText
            android:id="@+id/captcha_text"
            style="@style/InputFields"
            android:layout_marginBottom="10dp"
            android:hint="@string/captcha" />

        <Button
            android:id="@+id/submit"
            style="@style/InputFields.divider"
            android:text="@string/action_login" />

        <Button
            android:id="@+id/forgot"
            style="@style/InputFields"
            android:text="@string/action_forgot" />

        <Button
            android:id="@+id/register"
            style="@style/InputFields.divider"
            android:text="@string/action_register" />
    </LinearLayout>

</ScrollView>